- error log does not show up in taskbar (matching behavior of other windows)
- on the error log window, the "close" button is highlighted by default, letting you close it by hitting enter
- texture browser opens faster, and draws faster for smoother scrolling. mild tradeoff: currently selected item is shown with a solid background, instead of a gradient
- distant stuff in 3d visual mode is no longer obscured by fog. objects beyond the draw distance will "pop in", which may be mildly uglier, but more functional, as you get more draw distance with the same perfomance this way.
- new-map dialogue window filled in with "MAP01" by default
- configuration parser is faster -> program startup is faster
- remood, doom legacy, and jdoom cfgs disabled (less clutter, improves loading times). to re-enable them, move them from '\Configurations\old' to '\Configurations'.
- saving wad files with lumps in them unrelated to the current map should be around ~twice as fast
- logging is moved into its own thread, improving performance. should particularly help ppl with slower hard drives.
- significant speedups when drawing new geometry with a lot of vertices
- other misc performance improvements
- i've been having some issues compiling the visplane explorer plugin, so that isn't included for now :/
- newer version of zdoom ACC included
- fixed several crashes
- support for default values for some types of arguments to lines in game cfg files. same syntax as gzdb
- new game cfg linedef action setting "highlightmatchinglineid", used for EE-UDMF type 301 Line_QuickPortal
- changed titlebar text
- zokumbsp included
- default textures changed to CRATOP1 / CRATE1 / CRATOP2
- removed reject editor plugin because it's been causing crashes :/
- more explicit error if there are no plugins found
- removed system.xml and trackbar dependencies
- new error / crashlog handler
- actions can disregard the alt key (don't worry about it if you don't get it)